k8s/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: rakuten-api
  namespace: apps
spec:
  selector:
    app: rakuten-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
