k8s/ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rakuten-api
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rakuten-api
                port:
                  number: 80
